plugins/kotlin/idea/tests/testData/gradle/hmppImportAndHighlighting/multiModulesHmpp/bottom-mpp/src/iosSimLibMain/kotlin/transitiveStory/midActual/sourceCalls/intemediateCall/BottomActualMPPInheritor.kt
package transitiveStory.midActual.sourceCalls.intemediateCall

import transitiveStory.bottomActual.mppBeginning.BottomActualDeclarations

actual class <!LINE_MARKER("descr='Has declaration in common module'")!>BottomActualMPPInheritor<!> : BottomActualDeclarations()
